option('enable-websocket', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'WebSocket support')
option('enable-dns-sd', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'DNS-SD support')
option('enable-ssdp', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'SSDP support')
option('enable-ipv6', type: 'boolean', value: true, description: 'IPv6 support')
option('enable-systemd', type: 'boolean', value: false, description: 'systemd activation support')
option('enable-notification-daemon', type: 'boolean', value: true, description: 'notification-daemon plugin')
option('enable-nd-wayland', type: 'boolean', value: true, description: 'Wayland graphical backend')
option('enable-nd-xcb', type: 'boolean', value: true, description: 'XCB graphical backend')
option('enable-nd-fbdev', type: 'boolean', value: false, description: 'fbdev backend')
option('enable-im', type: 'boolean', value: true, description: 'IM support through libpurple')
option('enable-sound', type: 'boolean', value: true, description: 'Sound support through libsndfile')
option('enable-tts', type: 'boolean', value: false, description: 'Text-to-speech support through Speech Dispatcher')
option('enable-webhook', type: 'boolean', value: false, description: 'WebHook sender through libsoup')
option('enable-libnotify', type: 'boolean', value: true, description: 'libnotify support (client side)')
option('enable-libcanberra', type: 'boolean', value: false, description: 'libcanberra support')
option('enable-gobject-introspection', type: 'boolean', value: false, description: 'GObject Introspection support')
option('enable-debug', type: 'boolean', value: true, description: 'debug output')

option('systemduserunitdir', type: 'string', description: 'Directory for systemd user unit files')
option('systemdsystemunitdir', type: 'string', description: 'Directory for systemd system unit files')
option('dbussessionservicedir', type: 'string', description: 'Directory for D-Bus session service files')
