option('websocket', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'WebSocket support')
option('dns-sd', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'DNS-SD support')
option('ssdp', type: 'combo', choices: [ 'auto', 'true', 'false' ], description: 'SSDP support')
option('ipv6', type: 'boolean', value: true, description: 'IPv6 support')
option('systemd', type: 'boolean', value: false, description: 'systemd activation support')
option('notification-daemon', type: 'boolean', value: true, description: 'notification-daemon plugin')
option('nd-wayland', type: 'boolean', value: true, description: 'Wayland graphical backend')
option('nd-xcb', type: 'boolean', value: true, description: 'XCB graphical backend')
option('nd-fbdev', type: 'boolean', value: false, description: 'fbdev backend')
option('im', type: 'boolean', value: true, description: 'IM support through libpurple')
option('sound', type: 'boolean', value: true, description: 'Sound support through libsndfile')
option('tts', type: 'boolean', value: false, description: 'Text-to-speech support through Speech Dispatcher')
option('webhook', type: 'boolean', value: false, description: 'WebHook sender through libsoup')
option('libnotify', type: 'boolean', value: true, description: 'libnotify support (client side)')
option('libcanberra', type: 'boolean', value: false, description: 'libcanberra support')
option('gobject-introspection', type: 'boolean', value: false, description: 'GObject Introspection support')
option('debug', type: 'boolean', value: true, description: 'debug output')

option('systemduserunitdir', type: 'string', description: 'Directory for systemd user unit files')
option('systemdsystemunitdir', type: 'string', description: 'Directory for systemd system unit files')
option('dbussessionservicedir', type: 'string', description: 'Directory for D-Bus session service files')
